# SoftDevChallenges

./: README.md
dev1/: Makefile
dev2/: Makefile  gdb.py  public
dev3/clean/: Makefile.in  config.h.in  configure  configure.ac  configure.scan
dev3/clean/autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
dev3/clean/src/lib_foo/: Makefile.am
dev3/clean/src/main/: Makefile.am  Makefile.in
python1/: python1.py
python2/: solution.py
python3/: no_opt.py  opt.py  solution.py
scripts/: 2018_11_09.txt
shell1/: shell1
shell2/: shell2
shell3/: create_folder.sh  shell3  solution.sh  temp.sh  try.sh
